@@ -1,32 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 17:48:56 joerg Exp $
-include/sigc++-1.2/sigc++/adaptor.h
-include/sigc++-1.2/sigc++/bind.h
-include/sigc++-1.2/sigc++/bind_return.h
-include/sigc++-1.2/sigc++/class_slot.h
-include/sigc++-1.2/sigc++/connection.h
-include/sigc++-1.2/sigc++/hide.h
-include/sigc++-1.2/sigc++/macros/bind.h.m4
-include/sigc++-1.2/sigc++/macros/bind_return.h.m4
-include/sigc++-1.2/sigc++/macros/class_slot.h.m4
-include/sigc++-1.2/sigc++/macros/hide.h.m4
-include/sigc++-1.2/sigc++/macros/method_slot.h.m4
-include/sigc++-1.2/sigc++/macros/object_slot.h.m4
-include/sigc++-1.2/sigc++/macros/retype.h.m4
-include/sigc++-1.2/sigc++/macros/retype_return.h.m4
-include/sigc++-1.2/sigc++/macros/signal.h.m4
-include/sigc++-1.2/sigc++/macros/slot.h.m4
-include/sigc++-1.2/sigc++/macros/template.macros.m4
-include/sigc++-1.2/sigc++/marshal.h
-include/sigc++-1.2/sigc++/method_slot.h
-include/sigc++-1.2/sigc++/node.h
-include/sigc++-1.2/sigc++/object.h
-include/sigc++-1.2/sigc++/object_slot.h
-include/sigc++-1.2/sigc++/retype.h
-include/sigc++-1.2/sigc++/retype_return.h
-include/sigc++-1.2/sigc++/sigc++.h
-include/sigc++-1.2/sigc++/signal.h
-include/sigc++-1.2/sigc++/slot.h
-include/sigc++-1.2/sigc++/trait.h
-lib/libsigc-1.2.la
-lib/pkgconfig/sigc++-1.2.pc
-lib/sigc++-1.2/include/sigcconfig.h
