@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2538 2024/04/17 14:23:23 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2539 2024/04/17 14:26:14 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4193,3 +4193,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Added editors/libinfinity version 0.7.2 [wiz 2024-04-17]
 	Updated editors/gobby to 0.6.0 [wiz 2024-04-17]
 	Removed editors/obby [wiz 2024-04-17]
+	Removed devel/libsigc++1 [wiz 2024-04-17]
